--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="row-style1">bcg</div>
             </div>
             <div class="row" id="date">
-                <h2>What did you eat today? <input type="text" id="datepicker"> <button class="btn-class" id = "set">Set</button></h2>
+                <h2>What did you eat today? <input type="text" id="datepicker"></h2>
             </div>
             <div class="row">
                 <div id="searchFood">
